--- a/index.html
+++ b/index.html
@@ -125,5 +125,6 @@
         <p>&copy; 2025 padmavathi. All rights reserved.</p>
         <h6>Contact: <a href="email">nerellapadmavati19@gmail.com</a></h6>
     </footer>
+    <marquee direction="right" scroll amount="30%"> <p> Thank You for Visiting... </p></marquee>
 </body>
 </html>
